tests/invalid_semantic/arithmetic_bool.mc
int main() {
    int x;
    bool ok;
    ok = true;
    x = ok + 1;
    return x;
}
